tob/tps/.svn/pristine/0c/0c59a2f9eb1c5a3fa14a5b9924ade8887e3a3705.svn-base
Cercle.java:36: error: ';' expected
        assert p1.getX() != p2.getX() or p1.getY() != p2.getY();
                                     ^
Cercle.java:36: error: ';' expected
        assert p1.getX() != p2.getX() or p1.getY() != p2.getY();
                                           ^
Cercle.java:36: error: not a statement
        assert p1.getX() != p2.getX() or p1.getY() != p2.getY();
                                                   ^
Cercle.java:52: error: ';' expected
        assert p1.getX() != p2.getX() or p1.getY() != p2.getY();
                                     ^
Cercle.java:52: error: ';' expected
        assert p1.getX() != p2.getX() or p1.getY() != p2.getY();
                                           ^
Cercle.java:52: error: not a statement
        assert p1.getX() != p2.getX() or p1.getY() != p2.getY();
                                                   ^
Cercle.java:68: error: ';' expected
        assert p1.getX() != p2.getX() or p1.getY() != p2.getY();
                                     ^
Cercle.java:68: error: ';' expected
        assert p1.getX() != p2.getX() or p1.getY() != p2.getY();
                                           ^
Cercle.java:68: error: not a statement
        assert p1.getX() != p2.getX() or p1.getY() != p2.getY();
                                                   ^
9 errors
